src/objects/QPMS__Asset_Profile__c.object
<CustomObject>
    <description>Asset Profile</description>
    <fields>
        <fullName>Custodian_Name__c</fullName>
        <formula>QPMS__Custodian__r.FirstName+ &apos; &apos; +QPMS__Custodian__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Custodian</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiating_Site_Name__c</fullName>
        <formula>QPMS__Initiating_Site__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initiating Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <formula>QPMS__Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Asset_CodeLink__c</fullName>
        <formula>HYPERLINK(&quot;/apex/assetProfile?Id=&quot; &amp; Id, QPMS__Asset_Code__c ,&apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Asset_Code__c</fullName>
        <description>Asset Code</description>
        <inlineHelpText>Asset Code</inlineHelpText>
        <label>Asset ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Asset_Family_Name__c</fullName>
        <formula>IF( ISBLANK(QPMS__Asset_Family__c) , &apos; &apos;, QPMS__Asset_Family__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Family Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Asset_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset Family</description>
        <inlineHelpText>Asset Family</inlineHelpText>
        <label>Asset Family</label>
        <referenceTo>QPMS__Asset_Family__c</referenceTo>
        <relationshipLabel>Asset Profiles</relationshipLabel>
        <relationshipName>Asset_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Asset_Profile_Name__c</fullName>
        <description>Standard Listview Fix</description>
        <formula>HYPERLINK(&quot;/apex/assetProfile?Id=&quot; &amp; Id, Name ,&apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Custodian__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A person who has responsibility for taking care of</description>
        <inlineHelpText>A person who has responsibility for taking care of</inlineHelpText>
        <label>Custodian</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Asset_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Date_Manufactured__c</fullName>
        <description>It captures date when the product manufactured</description>
        <inlineHelpText>It captures date when the product manufactured</inlineHelpText>
        <label>Date Manufactured</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Date_Purchased__c</fullName>
        <description>It will capture the date when the product Purchased</description>
        <inlineHelpText>It will capture the date when the product Purchased</inlineHelpText>
        <label>Date Purchased</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Email__c</fullName>
        <description>User Email</description>
        <inlineHelpText>User Email</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <description>For Data Migration/Integration purposes</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__In_Use_Since__c</fullName>
        <description>stores the Created date of asset Profile</description>
        <inlineHelpText>stores the Created date of asset Profile</inlineHelpText>
        <label>In Use Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site_Security__c</fullName>
        <defaultValue>&apos;Global_Quality_Group&apos;</defaultValue>
        <description>Stores the logged in user site publc group</description>
        <inlineHelpText>Stores the logged in user site publc group</inlineHelpText>
        <label>Initiating Site Security</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Initiating Site</description>
        <inlineHelpText>Initiating Site</inlineHelpText>
        <label>Initiating Site</label>
        <referenceTo>QPMS__Manufacturing_Site__c</referenceTo>
        <relationshipLabel>Asset Profiles (Initiating Site)</relationshipLabel>
        <relationshipName>Asset_Profiles_For_InitSIte</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Last_Calibration_Date__c</fullName>
        <description>It captures when was the Last Calibration Date</description>
        <inlineHelpText>It captures when was the Last Calibration Date</inlineHelpText>
        <label>Last Calibration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Last_Maintenance_Date__c</fullName>
        <description>It captures the Last Maintenance Date</description>
        <inlineHelpText>It captures the Last Maintenance Date</inlineHelpText>
        <label>Last Maintenance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Location of an asset from where it is</description>
        <inlineHelpText>Location of an asset from where it is</inlineHelpText>
        <label>Location</label>
        <referenceTo>QPMS__Manufacturing_Site__c</referenceTo>
        <relationshipLabel>Asset Profiles</relationshipLabel>
        <relationshipName>Asset_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Maintenance_Number_Scheme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Maintenance Number Scheme</description>
        <inlineHelpText>Maintenance Number Scheme</inlineHelpText>
        <label>Maintenance Number Scheme</label>
        <referenceTo>QPMS__Number_Scheme__c</referenceTo>
        <relationshipLabel>Asset Profiles (Maintenance Number Scheme)</relationshipLabel>
        <relationshipName>Asset_Profiles_For_Maintenance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manufacturer name</description>
        <inlineHelpText>Manufacturer name</inlineHelpText>
        <label>Manufacturer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Asset Profiles</relationshipLabel>
        <relationshipName>Asset_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Model_Number__c</fullName>
        <description>captures the Model Number</description>
        <inlineHelpText>captures the Model Number</inlineHelpText>
        <label>Model Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Number_Scheme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Calibration Number Scheme</description>
        <inlineHelpText>Calibration Number Scheme</inlineHelpText>
        <label>Calibration Number Scheme</label>
        <referenceTo>QPMS__Number_Scheme__c</referenceTo>
        <relationshipLabel>Asset Profiles</relationshipLabel>
        <relationshipName>Asset_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Open_Calibration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this fields is used to store Schedule has open calibration or not</description>
        <inlineHelpText>this fields is used to store Schedule has open calibration or not</inlineHelpText>
        <label>Open Calibration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Open_Maintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Holds value if asset profile has open maintenance or not</description>
        <inlineHelpText>Holds value if asset profile has open maintenance or not</inlineHelpText>
        <label>Open Maintenance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Owned_By__c</fullName>
        <description>captures Owned By user type</description>
        <inlineHelpText>captures Owned By user type</inlineHelpText>
        <label>Owned By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Owner_Name__c</fullName>
        <formula>Owner:User.FirstName + &apos; &apos; +Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Pagelock__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It is used to lock and unlock the page</description>
        <inlineHelpText>It is used to lock and unlock the page</inlineHelpText>
        <label>Pagelock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Phone_Number__c</fullName>
        <description>Phone Number</description>
        <inlineHelpText>Phone Number</inlineHelpText>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>QPMS__Physical_Location__c</fullName>
        <description>Physical Location</description>
        <inlineHelpText>Physical Location</inlineHelpText>
        <label>Physical Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Purchase_Price__c</fullName>
        <description>Purchase Price</description>
        <inlineHelpText>Purchase Price</inlineHelpText>
        <label>Purchase Price</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Required_Humidity__c</fullName>
        <description>Required Humidity</description>
        <inlineHelpText>Required Humidity</inlineHelpText>
        <label>Required Humidity</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Required_Temperature__c</fullName>
        <description>Required Temperature</description>
        <inlineHelpText>Required Temperature</inlineHelpText>
        <label>Required Temperature</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Serial_Number__c</fullName>
        <description>Serial Number</description>
        <inlineHelpText>Serial Number</inlineHelpText>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Status__c</fullName>
        <description>Asset status</description>
        <inlineHelpText>Asset Status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Track_Spare_Part_Inventory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Track Spare Part Inventory</description>
        <inlineHelpText>Track Spare Part Inventory</inlineHelpText>
        <label>Track Spare Part Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Type__c</fullName>
        <description>Type of an asset</description>
        <inlineHelpText>Type of an asset</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Inspection</fullName>
                </value>
                <value>
                    <fullName>Measuring</fullName>
                </value>
                <value>
                    <fullName>Laboratory</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Validate_Against_Inventory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Validate against inventory</description>
        <inlineHelpText>Validate against inventory</inlineHelpText>
        <label>Validate Against Inventory</label>
        <type>Checkbox</type>
    </fields>
    <label>Asset Profile</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <columns>QPMS__Asset_Profile_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>QPMS__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>QPMS__AssetProfile_Phone_Number</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX( QPMS__Phone_Number__c, &quot;[0-9+\\-\\(\\)\\s]*&quot;))</errorConditionFormula>
        <errorDisplayField>QPMS__Phone_Number__c</errorDisplayField>
        <errorMessage>Should Contain Only Number</errorMessage>
    </validationRules>
</CustomObject>